<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan_barcode"
        android:enabled="true"
        android:icon="@drawable/ic_widget_scan"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.stockly.app"
            android:targetClass="com.stockly.app.MainActivity"
            android:data="stockly://scan">
            <extra android:name="shortcut_action" android:value="SCAN_BARCODE" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="stock_in"
        android:enabled="true"
        android:icon="@drawable/ic_widget_in"
        android:shortcutShortLabel="@string/shortcut_stock_in_short"
        android:shortcutLongLabel="@string/shortcut_stock_in_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.stockly.app"
            android:targetClass="com.stockly.app.MainActivity"
            android:data="stockly://stock?type=IN">
            <extra android:name="shortcut_action" android:value="STOCK_IN" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="stock_out"
        android:enabled="true"
        android:icon="@drawable/ic_widget_out"
        android:shortcutShortLabel="@string/shortcut_stock_out_short"
        android:shortcutLongLabel="@string/shortcut_stock_out_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.stockly.app"
            android:targetClass="com.stockly.app.MainActivity"
            android:data="stockly://stock?type=OUT">
            <extra android:name="shortcut_action" android:value="STOCK_OUT" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="add_product"
        android:enabled="true"
        android:icon="@drawable/ic_widget_add"
        android:shortcutShortLabel="@string/shortcut_product_short"
        android:shortcutLongLabel="@string/shortcut_product_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.stockly.app"
            android:targetClass="com.stockly.app.MainActivity"
            android:data="stockly://add-product">
            <extra android:name="shortcut_action" android:value="ADD_PRODUCT" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
